# easy_actions

./: .pre-commit-config.yaml  README.md  pyproject.toml
easy_actions/: __init__.py  applications.py
easy_actions/authenticators/: __init__.py  basic_auth.py
tests/: test_app.py
tests/test_authenticators/: test_basic_auth.py
